fix(type): work titles v-aligned properly

--- a/_includes/css/typography.css
+++ b/_includes/css/typography.css
@@ -381,7 +381,7 @@ figure {
 }
 
 .fig-link h3 {
-	margin-top: 27%;
+	margin-top: 5.5rem;
 	transform: translateY(25px);
 	-o-transform: translateY(25px);
 	-ms-transform: translateY(25px);
